--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "angular-in-memory-web-api": "~0.3.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "mongoose": "^4.12.5",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
