--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "~4.3.4",
     "@angular/platform-browser-dynamic": "~4.3.4",
     "@angular/router": "~4.3.4",
+    "@ngui/popup": "^0.5.1",
     "angular-in-memory-web-api": "~0.3.0",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
