--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngui/popup": "^0.5.1",
     "angular-in-memory-web-api": "~0.3.0",
     "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "mongoose": "^4.12.5",
